--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,16 @@ gson = "2.10.1"
 coroutines = "1.7.3"
 compose-compiler = "1.5.3"
 play-services-wearable = "19.0.0"
+compose-material = "1.2.1"
+compose-foundation = "1.2.1"
+wear-tooling-preview = "1.0.0"
+core-splashscreen = "1.0.1"
+material3-android = "1.3.2"
 
 [plugins]
-androidApplication = { id = "com.android.application", version = "8.2.0" }
+androidApplication = { id = "com.android.application", version = "8.1.0" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+#kotlinCompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "kotlin" }
@@ -43,3 +49,8 @@ retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", ver
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "play-services-wearable" }
+androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "compose-material" }
+androidx-compose-foundation = { group = "androidx.wear.compose", name = "compose-foundation", version.ref = "compose-foundation" }
+androidx-wear-tooling-preview = { group = "androidx.wear", name = "wear-tooling-preview", version.ref = "wear-tooling-preview" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splashscreen" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3-android" }
