--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ compose-foundation = "1.2.1"
 wear-tooling-preview = "1.0.0"
 core-splashscreen = "1.0.1"
 material3-android = "1.3.2"
+coil = "2.4.0"
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version = "8.1.0" }
@@ -35,6 +37,7 @@ androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
 junit = { group = "junit", name = "junit", version = "4.13.2" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.5.1" }
