--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ compose-foundation = "1.2.1"
 wear-tooling-preview = "1.0.0"
 core-splashscreen = "1.0.1"
 material3-android = "1.3.2"
+coil = "2.4.0"
 
 [plugins]
 androidApplication = { id = "com.android.application", version = "8.1.0" }
@@ -44,6 +45,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 # Retrofit & Gson
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+
 
 # Kotlin Coroutines
 coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
